<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/paper_background"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:id="@+id/dice_roller_area"
        android:layout_weight="20">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/dice_area"
            android:weightSum="100"
            android:baselineAligned="false">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/dice_result_area"
                android:layout_weight="75">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:text="@string/dice_result_tag"
                    android:id="@+id/dice_result_tag"
                    android:layout_weight="12.5"
                    android:textColor="@color/text_dark"
                    android:textSize="@dimen/text_dice_result_tag"

                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:text="nein"
                    android:id="@+id/dice_result"
                    android:layout_weight="48"
                    android:background="@drawable/bg_dice_result"
                    android:textColor="@color/text_dark"
                    android:textSize="@dimen/text_dice_result"
                    android:textStyle="bold"
                    android:gravity="center_horizontal|bottom" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:text="@string/last_5_rolls_tag"
                    android:id="@+id/last_5_rolls_tag"
                    android:layout_weight="12.5"
                    android:textColor="@color/text_dark"
                    android:textSize="@dimen/text_last_5_rolls_tag"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:id="@+id/last_5_rolls"
                    android:layout_weight="27"
                    android:textColor="@color/text_dark"
                    android:textSize="@dimen/text_last_5_rolls" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/dice_rolling_area"
                android:layout_weight="30">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:id="@+id/dice_2_to_10_area"
                    android:layout_weight="5">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/D2"
                        android:id="@+id/dice_d2"
                        android:layout_weight="2"
                        android:background="@drawable/button_custom"
                        android:textColor="@color/text_white"
                        android:textSize="@dimen/text_dice_size_1digit" />
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/D4"
                        android:id="@+id/dice_d4"
                        android:layout_weight="2"
                        android:background="@drawable/button_custom"
                        android:textColor="@color/text_white"
                        android:textSize="@dimen/text_dice_size_1digit"
                        />
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/D6"
                        android:id="@+id/dice_d6"
                        android:layout_weight="2"
                        android:background="@drawable/button_custom"
                        android:textColor="@color/text_white"
                        android:textSize="@dimen/text_dice_size_1digit"
                        />
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/D8"
                        android:id="@+id/dice_d8"
                        android:layout_weight="2"
                        android:background="@drawable/button_custom"
                        android:textColor="@color/text_white"
                        android:textSize="@dimen/text_dice_size_1digit"
                        />
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/D10"
                        android:id="@+id/dice_d10"
                        android:layout_weight="2"
                        android:background="@drawable/button_custom"
                        android:textColor="@color/text_white"
                        android:textSize="@dimen/text_dice_size_2digit"
                        />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:id="@+id/dice_10_to_clear_area"
                    android:layout_weight="5">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/D12"
                        android:id="@+id/dice_d12"
                        android:layout_weight="2"
                        android:background="@drawable/button_custom"
                        android:textColor="@color/text_white"
                        android:textSize="@dimen/text_dice_size_2digit"
                        />
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/D20"
                        android:id="@+id/dice_d20"
                        android:layout_weight="2"
                        android:background="@drawable/button_custom"
                        android:textColor="@color/text_white"
                        android:textSize="@dimen/text_dice_size_2digit"
                        />
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/D30"
                        android:id="@+id/dice_d30"
                        android:layout_weight="2"
                        android:background="@drawable/button_custom"
                        android:textColor="@color/text_white"
                        android:textSize="@dimen/text_dice_size_2digit"
                        />
                    <Button

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/D100"
                        android:id="@+id/dice_d100"
                        android:layout_weight="2"
                        android:background="@drawable/button_custom"
                        android:textColor="@color/text_white"
                        android:textSize="@dimen/text_dice_size_3digit"
                        />
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/clear"
                        android:id="@+id/dice_clear"
                        android:layout_weight="2"
                        android:background="@drawable/button_custom"
                        android:textColor="@color/text_red"
                        android:textSize="@dimen/text_dice_size_clear"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:id="@+id/characterTable"
        android:layout_marginTop="5dp"
        android:baselineAligned="false">

        <TableRow android:layout_height="wrap_content">

            <TextView
                android:text="@string/npc"
                android:id="@+id/NPC"
                android:textStyle="bold"
                android:textSize="@dimen/table_chararacter_title"
                android:textColor="@color/text_dark"
                android:layout_weight="1" />

            <TextView
                android:text="@string/char_name"
                android:id="@+id/name"
                android:layout_weight="5"
                android:textStyle="bold"
                android:textSize="@dimen/table_chararacter_title"
                android:textColor="@color/text_dark" />

            <TextView
                android:text="@string/hp"
                android:id="@+id/HP"
                android:textStyle="bold"
                android:textSize="@dimen/table_chararacter_title"
                android:textColor="@color/text_dark"
                android:layout_weight="1" />

            <TextView
                android:text="@string/initiative_short"
                android:id="@+id/Ini"
                android:textStyle="bold"
                android:textSize="@dimen/table_chararacter_title"
                android:textColor="@color/text_dark"
                android:layout_weight="1" />

            <TextView
                android:text="@string/active"
                android:id="@+id/active"
                android:textStyle="bold"
                android:textSize="@dimen/table_chararacter_title"
                android:textColor="@color/text_dark"
                android:layout_weight="1" />
        </TableRow>

        <TableRow>

            <TextView
                android:text="X"
                android:id="@+id/npc_1"
                android:layout_weight="1" />

            <TextView
                android:text="Gilliath"
                android:id="@+id/name_1"
                android:layout_weight="5" />

            <TextView
                android:text="25"
                android:id="@+id/HP_1"
                android:layout_weight="1" />

            <TextView
                android:text="15"
                android:id="@+id/ini_1"
                android:layout_weight="1" />

            <TextView
                android:text="X"
                android:id="@+id/active_1"
                android:layout_weight="1" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="30">
    </LinearLayout>
</LinearLayout>
